# aerosol

./: CMakeLists.txt
HARDWARE/IIC/: myiicG.c  myiicg.h
HARDWARE/SHOW/: show.c
HARDWARE/TEXT/: text.c
HARDWARE/TOUCH/: touch.c  touchkey.c
USER/: STMFLASH.map  STMFLASH.uvguix.RobertWang  STMFLASH.uvguix.wpk  STMFLASH.uvoptx  STMFLASH.uvprojx  main.c  startup_stm32f10x_hd.lst
