cmake_minimum_required(VERSION 3.6)
project()

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
    CORE/core_cm3.c
    CORE/core_cm3.h
    HARDWARE/24CXX/24cxx.c
    HARDWARE/24CXX/24cxx.h
    HARDWARE/ADC/adc.c
    HARDWARE/ADC/adc.h
    HARDWARE/DAC/dac.c
    HARDWARE/DAC/dac.h
    HARDWARE/DHT11/dht11.c
    HARDWARE/DHT11/dht11.h
    HARDWARE/IIC/GaoYakongzhi.c
    HARDWARE/IIC/GaoYakongzhi.h
    HARDWARE/IIC/myiic.c
    HARDWARE/IIC/myiic.h
    HARDWARE/IIC/myiicG.c
    HARDWARE/IIC/myiicg.h
    HARDWARE/KEY/key.c
    HARDWARE/KEY/key.h
    HARDWARE/LCD/font.h
    HARDWARE/LCD/lcd.c
    HARDWARE/LCD/lcd.h
    HARDWARE/LED/led.c
    HARDWARE/LED/led.h
    HARDWARE/SHOW/drawpoint.c
    HARDWARE/SHOW/drawpoint.h
    HARDWARE/SHOW/set.c
    HARDWARE/SHOW/set.h
    HARDWARE/SHOW/show.c
    HARDWARE/SHOW/show.h
    HARDWARE/SHOW/showrtad.c
    HARDWARE/SHOW/showrtad.h
    HARDWARE/SPI/spi.c
    HARDWARE/SPI/spi.h
    HARDWARE/STMFLASH/stmflash.c
    HARDWARE/STMFLASH/stmflash.h
    HARDWARE/TEXT/ff.c
    HARDWARE/TEXT/ff.h
    HARDWARE/TEXT/fontupd.c
    HARDWARE/TEXT/fontupd.h
    HARDWARE/TEXT/text.c
    HARDWARE/TEXT/text.h
    HARDWARE/TOUCH/ctiic.c
    HARDWARE/TOUCH/ctiic.h
    HARDWARE/TOUCH/ft5206.c
    HARDWARE/TOUCH/ft5206.h
    HARDWARE/TOUCH/gt9147.c
    HARDWARE/TOUCH/gt9147.h
    HARDWARE/TOUCH/ott2001a.c
    HARDWARE/TOUCH/ott2001a.h
    HARDWARE/TOUCH/touch.c
    HARDWARE/TOUCH/touch.h
    HARDWARE/TOUCH/touchkey.c
    HARDWARE/TOUCH/touchkey.h
    HARDWARE/TOUCHKEY/touchkey.c
    HARDWARE/TOUCHKEY/touchkey.h
    HARDWARE/W25QXX/w25qxx.c
    HARDWARE/W25QXX/w25qxx.h
    STM32F10x_FWLib/inc/misc.h
    STM32F10x_FWLib/inc/stm32f10x_adc.h
    STM32F10x_FWLib/inc/stm32f10x_bkp.h
    STM32F10x_FWLib/inc/stm32f10x_can.h
    STM32F10x_FWLib/inc/stm32f10x_cec.h
    STM32F10x_FWLib/inc/stm32f10x_crc.h
    STM32F10x_FWLib/inc/stm32f10x_dac.h
    STM32F10x_FWLib/inc/stm32f10x_dbgmcu.h
    STM32F10x_FWLib/inc/stm32f10x_dma.h
    STM32F10x_FWLib/inc/stm32f10x_exti.h
    STM32F10x_FWLib/inc/stm32f10x_flash.h
    STM32F10x_FWLib/inc/stm32f10x_fsmc.h
    STM32F10x_FWLib/inc/stm32f10x_gpio.h
    STM32F10x_FWLib/inc/stm32f10x_i2c.h
    STM32F10x_FWLib/inc/stm32f10x_iwdg.h
    STM32F10x_FWLib/inc/stm32f10x_pwr.h
    STM32F10x_FWLib/inc/stm32f10x_rcc.h
    STM32F10x_FWLib/inc/stm32f10x_rtc.h
    STM32F10x_FWLib/inc/stm32f10x_sdio.h
    STM32F10x_FWLib/inc/stm32f10x_spi.h
    STM32F10x_FWLib/inc/stm32f10x_tim.h
    STM32F10x_FWLib/inc/stm32f10x_usart.h
    STM32F10x_FWLib/inc/stm32f10x_wwdg.h
    STM32F10x_FWLib/src/misc.c
    STM32F10x_FWLib/src/stm32f10x_adc.c
    STM32F10x_FWLib/src/stm32f10x_bkp.c
    STM32F10x_FWLib/src/stm32f10x_can.c
    STM32F10x_FWLib/src/stm32f10x_cec.c
    STM32F10x_FWLib/src/stm32f10x_crc.c
    STM32F10x_FWLib/src/stm32f10x_dac.c
    STM32F10x_FWLib/src/stm32f10x_dbgmcu.c
    STM32F10x_FWLib/src/stm32f10x_dma.c
    STM32F10x_FWLib/src/stm32f10x_exti.c
    STM32F10x_FWLib/src/stm32f10x_flash.c
    STM32F10x_FWLib/src/stm32f10x_fsmc.c
    STM32F10x_FWLib/src/stm32f10x_gpio.c
    STM32F10x_FWLib/src/stm32f10x_i2c.c
    STM32F10x_FWLib/src/stm32f10x_iwdg.c
    STM32F10x_FWLib/src/stm32f10x_pwr.c
    STM32F10x_FWLib/src/stm32f10x_rcc.c
    STM32F10x_FWLib/src/stm32f10x_rtc.c
    STM32F10x_FWLib/src/stm32f10x_sdio.c
    STM32F10x_FWLib/src/stm32f10x_spi.c
    STM32F10x_FWLib/src/stm32f10x_tim.c
    STM32F10x_FWLib/src/stm32f10x_usart.c
    STM32F10x_FWLib/src/stm32f10x_wwdg.c
    SYSTEM/delay/delay.c
    SYSTEM/delay/delay.h
    SYSTEM/sys/sys.c
    SYSTEM/sys/sys.h
    SYSTEM/usart/usart.c
    SYSTEM/usart/usart.h
    USER/main.c
    USER/stm32f10x.h
    USER/stm32f10x_conf.h
    USER/stm32f10x_it.c
    USER/stm32f10x_it.h
    USER/system_stm32f10x.c
    USER/system_stm32f10x.h)

add_executable( ${SOURCE_FILES})